--- a/basics-assignment-2-problem/index.html
+++ b/basics-assignment-2-problem/index.html
@@ -19,15 +19,19 @@
     <section id="assignment">
       <h2>Event Practice</h2>
       <!-- 1) Show an alert (any text of your choice) when the button is pressed -->
-      <button>Show Alert</button>
+      <button v-on:click="buttonAlert">Show Alert</button>
       <hr />
       <!-- 2) Register the user input on "keydown" and output it in the paragraph (hint: event.target.value helps) -->
-      <input type="text" />
-      <p>OUTPUT</p>
+      <input type="text" v-on:keydown="setOutput1($event)" />
+      <p>{{ firstOutput }}</p>
       <hr />
       <!-- 3) Repeat 2) but only output the entered value if the ENTER key was pressed -->
-      <input type="text" />
-      <p>OUTPUT</p>
+      <input
+        type="text"
+        v-on:keydown="setOutput1($event)"
+        v-on:keyup.enter="setOutput2($event)"
+      />
+      <p>{{ secondOutput }}</p>
     </section>
   </body>
 </html>
